[client] Fix flickering on ecu classnames

--- a/packages/ecu-client/src/css/edition.css
+++ b/packages/ecu-client/src/css/edition.css
@@ -1,5 +1,8 @@
 .ecu-can-be-edited {
   white-space: pre-wrap;
+  display: flex;
+  flex-direction: column;
+  min-height: 19px;
 }
 
 .ecu-selected-root {
